<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_ask_question_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="vertical"
            android:weightSum="5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|left"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_weight="1.5"
                    android:gravity="center|left"
                    android:text="@string/title"
                    android:textSize="@dimen/_15sdp"
                     />

                <EditText
                    android:id="@+id/activity_ask_question_edquestion"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_gravity="center|left"
                    android:layout_weight="0.5"
                    android:background="@drawable/loginbtn_bg"
                    android:gravity="center|left"
                    android:paddingLeft="@dimen/_10sdp"
                    android:textSize="@dimen/_15sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|left"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_weight="1.5"
                    android:gravity="center|left"
                    android:text="@string/tag"
                    android:textSize="@dimen/_15sdp"
                    />

                <EditText
                    android:id="@+id/activity_ask_question_edtags"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_gravity="center|left"
                    android:layout_weight="0.5"
                    android:background="@drawable/loginbtn_bg"
                    android:gravity="center|left"
                    android:paddingLeft="@dimen/_10sdp"
                    android:textSize="@dimen/_15sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|left"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_weight="1.5"
                    android:gravity="center|left"
                    android:text="@string/option1"
                    android:textSize="@dimen/_15sdp"
                   />

                <EditText
                    android:id="@+id/activity_ask_question_edoption1"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_gravity="center|left"
                    android:layout_weight="0.5"
                    android:background="@drawable/loginbtn_bg"
                    android:gravity="center|left"
                    android:paddingLeft="@dimen/_10sdp"
                    android:textSize="@dimen/_15sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|left"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_weight="1.5"
                    android:gravity="center|left"
                    android:text="@string/option2"
                    android:textSize="@dimen/_15sdp"
                   />

                <EditText
                    android:id="@+id/activity_ask_question_edoption2"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_gravity="center|left"
                    android:layout_weight="0.5"
                    android:background="@drawable/loginbtn_bg"
                    android:gravity="center|left"
                    android:paddingLeft="@dimen/_10sdp"
                    android:textSize="@dimen/_15sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|left"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_weight="1.5"
                    android:gravity="center|left"
                    android:text="@string/option3"
                    android:textSize="@dimen/_15sdp"
                    />

                <EditText
                    android:id="@+id/activity_ask_question_edoption3"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_gravity="center|left"
                    android:layout_weight="0.5"
                    android:background="@drawable/loginbtn_bg"
                    android:gravity="center|left"
                    android:paddingLeft="@dimen/_10sdp"
                    android:textSize="@dimen/_15sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|left"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_weight="1.5"
                    android:gravity="center|left"
                    android:text="@string/option4"
                    android:textSize="@dimen/_15sdp"
                    />

                <EditText
                    android:id="@+id/activity_ask_question_edoption4"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_gravity="center|left"
                    android:layout_weight="0.5"
                    android:background="@drawable/loginbtn_bg"
                    android:gravity="center|left"
                    android:paddingLeft="@dimen/_10sdp"
                    android:textSize="@dimen/_15sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="vertical"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|left"
                        android:layout_weight="1"
                        android:gravity="center|left"
                        android:text="@string/file"
                        android:textSize="@dimen/_15sdp"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:orientation="horizontal"
                        android:weightSum="2">


                        <EditText
                            android:id="@+id/activity_ask_question_edfilepath"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:layout_gravity="center|left"
                            android:layout_weight="0.6"
                            android:background="@drawable/loginbtn_bg"
                            android:gravity="center|left"
                            android:text=""
                            android:textSize="@dimen/_15sdp" />

                        <Button
                            android:id="@+id/activity_ask_question_btnbrowse"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_5sdp"
                            android:layout_weight="1.4"
                            android:background="@color/choosefile"
                            android:text="@string/choosefile"
                            android:textColor="@color/white" />

                    </LinearLayout>
                </LinearLayout>

                <!--<ImageView-->
                <!--android:id="@+id/activity_ask_question_imgbrowse"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="@dimen/_100sdp"-->
                <!--android:padding="@dimen/_5sdp" />-->
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|left"
                        android:layout_margin="@dimen/_5sdp"
                        android:gravity="center|left"
                        android:text="@string/chooseinterest"
                        android:textSize="@dimen/_15sdp"
                         />

                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/activity_ask_question_spinnerinterest"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:contextClickable="true"
                        android:background="@drawable/loginbtn_bg"

                        >

                    </android.support.v7.widget.AppCompatSpinner>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|left"
                        android:layout_margin="@dimen/_5sdp"
                        android:gravity="center|left"
                        android:text="@string/addtime"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:textSize="@dimen/_15sdp"
                         />

                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/activity_ask_question_timespinner"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:entries="@array/time"
                        android:background="@drawable/loginbtn_bg"
                        >
                </android.support.v7.widget.AppCompatSpinner>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/activity_ask_question_btnsubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@color/askque"
                    android:text="Submit"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>


